# pay-by-square-generator-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  k8s-deployment.yaml
src/: errors.rs  generator.rs  lib.rs  main.rs  models.rs  qr.rs  validation.rs
