[package]
name = "pay-by-square-generator"
version = "1.0.0"
edition = "2021"
authors = ["Pay By Square Generator Team"]
description = "REST API service for generating PayBySquare QR codes according to Slovak banking standard v1.1.0"

[[bin]]
name = "pay-by-square-generator"
path = "src/main.rs"

[lib]
name = "pay_by_square_generator"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
qrcode = "0.14"
image = "0.25"
crc32fast = "1.4"
xz2 = "0.1"
utoipa = { version = "4", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
